Changes to build for Tempest

--- a/conf/machine/imx8mp-var-dart.conf
+++ b/conf/machine/imx8mp-var-dart.conf
@@ -25,6 +25,7 @@ KERNEL_DEVICETREE = " \
 	freescale/imx8mp-var-som-symphony-2nd-ov5640.dtb \
 	freescale/imx8mp-var-som-symphony-m7.dtb \
 	freescale/imx8mp-var-som-symphony-2nd-ov5640-m7.dtb \
+	freescale/imx8mp-var-dart-xhead-tempest.dtb \
 "
 
 MACHINE_EXTRA_RRECOMMENDS_remove = " imx-m7-demos"
@@ -43,7 +44,7 @@ DDR_FIRMWARE_NAME = " \
 
 # Set U-Boot DTB
 UBOOT_DTB_NAME  = "imx8mp-var-dart-dt8mcustomboard.dtb"
-UBOOT_DTB_EXTRA = "imx8mp-var-dart-dt8mcustomboard-legacy.dtb imx8mp-var-som-symphony.dtb"
+UBOOT_DTB_EXTRA = "imx8mp-var-dart-dt8mcustomboard-legacy.dtb imx8mp-var-som-symphony.dtb imx8mp-var-dart-xhead-tempest.dtb"
 
 # Set imx-mkimage boot target
 IMXBOOT_TARGETS = "flash_evk"
