--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,3 +1,5 @@
+include conf/machine/imx8mp-var-dart-tempest.conf
+
 # We have a conf and classes directory, add to BBPATH
 BBPATH .= ":${LAYERDIR}"
 
