--- a/recipes-kernel/linux/files/imx8mp-var-dart-xhead-tempest.dts
+++ b/recipes-kernel/linux/files/imx8mp-var-dart-xhead-tempest.dts
@@ -106,10 +106,18 @@
 
 /* BLDC Motor Controller on X-Head */
 &uart4 {
-	pinctrl-names = "default";
+	pinctrl-names = "default";extcon-usb-gpio
 	pinctrl-0 = <&pinctrl_uart4>;
 	status = "okay";
 };
+
+extcon_usb1: extcon_usb1 {
+		compatible = "linux,extcon-usb-gpio";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_extcon>;
+		id-gpio = <&gpio1 10 GPIO_ACTIVE_HIGH>;
+		status = "okay";
+	};
 
 /* LVDS */
 &lcdif2 {
